29.6.8 (ws)
      - fix crash when entering note entry mode
28.6.8 (ws)
      - new command: "R" repeats last command
      - bug fix: "save file" messed up the scores when more than one score was
        loaded and modified
27.6.8 (ws)
      - fixed crash when trying to copy/paste a slur
      - tuplet dialog now also works on selected rests
      - fix for midi input: midi clock events destroy relayout/refresh of score
        during editing
      - fixed crash when incrementing pitch of note in a system with a hbox
26.6.8 (ws)
      - added "Reset to Default" button in preferences dialog
      - create end bar line after deletion of last measure as suggested by
        David Bolton
      - when selecting measures at score end for deletion the last measure was
        never deleted
      - mscore did a complete relayout on every received midi event. This
        is especially slow when an attached keyboard sends midi clock or active sense
        messages.
20.6.8 (ws)
      - fixed crash when appending HFrame
      - fixed crash when playing new created score
16.6.8 (ws)
      - fix dragging dynamics symbols to staff > 1
      - added french translation from Lasconic
14.6.8 (ws)
      - add language selection to preferences
      - some name changes: changed Articulation to Channel; changed NoteAttribute
        to Articulation
10.6.8 (ws)
      - first implementation of "Display in Concert Pitch" style option
      - integrated qt script debugger; enable debugger by starting
        mscore with option "-D"
9.6.8 (ws)
      - fluid synth settings: increase max channel number to 64,
        set audio channels to two
      - added qt script debug to build system
6.6.8 (ws)
      - Transpose key in new wizard for transposing instruments.
        Example: tenor sax sounds 14 semitones lower than notated,
        if the score is c major, then the tenor sax staff is created with
        two sharps (d major).
5.6.8  (ws)